--- a/main.ipynb
+++ b/main.ipynb
@@ -121,7 +121,6 @@
     "print(\"text corpus type\",type(text_corpus[0]))\n",
     "\n",
     "\n",
-    "\n",
     "# Preprocess text \n",
     "text_corpus_prepro = [word for speech in df['Speech_Text_prepro'].str.split() for word in speech]\n",
     "train_corpus_prepro, test_corpus_prepro = train_test_split(text_corpus_prepro, test_size=0.2, random_state=42)"
@@ -187,13 +186,7 @@
     }
    ],
    "source": [
-    "print(\"output:\", type(output))\n",
-    "print(\"X_train Shape:\", output.shape)\n",
-    "print(\"X_train Example Sequence:\", output[1])\n",
-    "\n",
-    "print(\"y_train Data Type:\", type(y_train))\n",
-    "print(\"y_train Shape:\", y_train.shape)\n",
-    "print(\"y_train Example Value:\", y_train[0])\n"
+    "\n"
    ]
   },
   {
@@ -206,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,27 +236,29 @@
     "    def load(self, path):\n",
     "        self.model = tf.keras.models.load_model(path)\n",
     "         \n",
-    "    def generate_text(self, start_string, num_generate=1000):\n",
-    "        # Vectorize your start string using the tokenizer you built earlier\n",
-    "        input_eval = [tokenizer.word_index[word] for word in start_string.split()]\n",
-    "        input_eval = tf.expand_dims(input_eval, 0)\n",
-    "         \n",
-    "        # Empty string to store your results\n",
-    "        text_generated = []\n",
-    "         \n",
-    "        # Here batch size == 1\n",
-    "        self.model.reset_states()\n",
-    "        for i in range(num_generate):\n",
+    "    def generate_text(self, seed_text, max_length=100):\n",
+    "        output_text = seed_text.split()\n",
+    "        prefix = output_text[-(self.n - 1):]\n",
+    "\n",
+    "        for _ in range(max_length):\n",
+    "            input_eval = [tokenizer.word_index[word] for word in prefix]\n",
+    "            input_eval = tf.expand_dims(input_eval, 0)\n",
+    "\n",
     "            predictions = self.model(input_eval)\n",
     "            predictions = tf.squeeze(predictions, 0)\n",
-    "             \n",
-    "            predicted_id = tf.random.categorical(predictions, num_samples=1)[-1,0].numpy()\n",
-    "             \n",
-    "            input_eval = tf.expand_dims([predicted_id], 0)\n",
-    "             \n",
-    "            text_generated.append(tokenizer.index_word[predicted_id])\n",
-    "             \n",
-    "        return (start_string + ' '.join(text_generated))\n"
+    "\n",
+    "            # Ensure predictions is a 2D matrix\n",
+    "            if len(predictions.shape) == 1:\n",
+    "                predictions = tf.expand_dims(predictions, 0)\n",
+    "\n",
+    "            predicted_id = tf.random.categorical(predictions, num_samples=1)[-1, 0].numpy()\n",
+    "            next_word = tokenizer.index_word[predicted_id]\n",
+    "\n",
+    "            output_text.append(next_word)\n",
+    "            prefix = prefix[1:] + [next_word]\n",
+    "\n",
+    "        return ' '.join(output_text)\n",
+    "\n"
    ]
   },
   {
@@ -323,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -336,40 +331,54 @@
     }
    ],
    "source": [
-    "print(model_LSTM.evaluate(X_test, y_test))"
+    "predictions = "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_LSTM.save('model_LSTM.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/workspaces/Trump_TextGeneration_NLP_Project/myenv/lib/python3.10/site-packages/keras/src/engine/training.py:3079: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
-      "  saving_api.save_model(\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'my_model_LSTM' object has no attribute 'text_corpus'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model_LSTM\u001b[39m.\u001b[39msave(\u001b[39m'\u001b[39m\u001b[39mmodel_LSTM.h5\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m model_LSTM\u001b[39m.\u001b[39mload(\u001b[39m'\u001b[39m\u001b[39mmodel_LSTM.h5\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m model_LSTM\u001b[39m.\u001b[39;49mgenerate_text(\u001b[39m'\u001b[39;49m\u001b[39mI\u001b[39;49m\u001b[39m'\u001b[39;49m, num_generate\u001b[39m=\u001b[39;49m\u001b[39m1000\u001b[39;49m)\n",
-      "Cell \u001b[0;32mIn[22], line 35\u001b[0m, in \u001b[0;36mmy_model_LSTM.generate_text\u001b[0;34m(self, start_string, num_generate)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgenerate_text\u001b[39m(\u001b[39mself\u001b[39m, start_string, num_generate\u001b[39m=\u001b[39m\u001b[39m1000\u001b[39m):\n\u001b[0;32m---> 35\u001b[0m     input_eval \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtext_corpus\u001b[39m.\u001b[39mindex(s) \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m start_string\u001b[39m.\u001b[39msplit()]\n\u001b[1;32m     36\u001b[0m     input_eval \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mexpand_dims(input_eval, \u001b[39m0\u001b[39m)\n\u001b[1;32m     37\u001b[0m     text_generated \u001b[39m=\u001b[39m []\n",
-      "Cell \u001b[0;32mIn[22], line 35\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgenerate_text\u001b[39m(\u001b[39mself\u001b[39m, start_string, num_generate\u001b[39m=\u001b[39m\u001b[39m1000\u001b[39m):\n\u001b[0;32m---> 35\u001b[0m     input_eval \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtext_corpus\u001b[39m.\u001b[39mindex(s) \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m start_string\u001b[39m.\u001b[39msplit()]\n\u001b[1;32m     36\u001b[0m     input_eval \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mexpand_dims(input_eval, \u001b[39m0\u001b[39m)\n\u001b[1;32m     37\u001b[0m     text_generated \u001b[39m=\u001b[39m []\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'my_model_LSTM' object has no attribute 'text_corpus'"
+      "Word index for 'I': 109\n"
      ]
     }
    ],
    "source": [
-    "model_LSTM.save('model_LSTM.h5')\n",
+    "print(\"Word index for 'I':\", tokenizer.word_index['my'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "france is the country of weapons exonerated priorities bias fest interest phds cup relationship and…\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_LSTM = my_model_LSTM(256, num_unique_words, max_sequence_length)\n",
     "model_LSTM.load('model_LSTM.h5')\n",
-    "model_LSTM.generate_text('I', num_generate=1000)"
+    "seed_text = 'france is the country of'\n",
+    "generated_text = model_LSTM.generate_text(seed_text, max_length=10)\n",
+    "print(generated_text)"
    ]
   },
   {
