--- a/main.ipynb
+++ b/main.ipynb
@@ -95,7 +95,8 @@
     "from preprocessing import preprocessing_pipline\n",
     "\n",
     "preprocessing = preprocessing_pipline(df['Speech_Text'])\n",
-    "df['Speech_Text_prepro'] = preprocessing.preprocess_light()"
+    "df['Speech_Text_prepro'] = preprocessing.preprocess_light()\n",
+    "print "
    ]
   },
   {
@@ -128,65 +129,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.preprocessing.text import Tokenizer\n",
-    "\n",
-    "# Create a tokenizer and fit it on your text corpus\n",
-    "tokenizer = Tokenizer()\n",
-    "tokenizer.fit_on_texts(text_corpus)\n",
-    "\n",
-    "input = []\n",
-    "output = []\n",
-    "\n",
-    "lenght_of_sequences = 10\n",
-    "\n",
-    "for i in range(lenght_of_sequences, len(train_corpus)):\n",
-    "    input.append(train_corpus[i-lenght_of_sequences:i])\n",
-    "    output.append(train_corpus[i])\n",
-    "\n",
-    "input = tokenizer.texts_to_sequences(input)\n",
-    "output = tokenizer.texts_to_sequences(output)\n",
-    "\n",
-    "# pad \n",
     "from keras.preprocessing.sequence import pad_sequences\n",
-    "input = pad_sequences(input, maxlen=lenght_of_sequences, padding='pre')\n",
-    "output = pad_sequences(output, maxlen=1, padding='pre')\n",
-    "# Convert your lists of input sequences into numpy arrays\n",
-    "import numpy as np\n",
-    " \n",
-    "input = np.array(input)\n",
-    "output = np.array(output)\n",
-    "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
     "\n",
-    "# Split your data into train and test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(input, output, test_size=0.2, random_state=42)\n",
+    "\n",
+    "def preprocess_for_LSTM(text_corpus, max_sequence_length=10, test_size=0.2):\n",
+    "    tokenizer = Tokenizer()\n",
+    "    tokenizer.fit_on_texts(text_corpus)\n",
+    "\n",
+    "    input = []\n",
+    "    output = []\n",
+    "\n",
+    "    lenght_of_sequences = 10\n",
+    "\n",
+    "    for i in range(lenght_of_sequences, len(train_corpus)):\n",
+    "        input.append(train_corpus[i-lenght_of_sequences:i])\n",
+    "        output.append(train_corpus[i])\n",
+    "\n",
+    "    input = tokenizer.texts_to_sequences(input)\n",
+    "    output = tokenizer.texts_to_sequences(output)\n",
+    "\n",
+    "    # pad \n",
+    "    input = pad_sequences(input, maxlen=lenght_of_sequences, padding='pre')\n",
+    "    output = pad_sequences(output, maxlen=1, padding='pre')\n",
+    "    # Convert your lists of input sequences into numpy arrays\n",
+    "    \n",
+    "    input = np.array(input)\n",
+    "    output = np.array(output)\n",
+    "\n",
+    "    # Split your data into train and test sets\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(input, output, test_size=0.2, random_state=42)\n",
+    "    \n",
+    "    return X_train, X_test, y_train, y_test, tokenizer\n",
+    "\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output: <class 'numpy.ndarray'>\n",
-      "X_train Shape: (296371, 1)\n",
-      "X_train Example Sequence: [46]\n",
-      "y_train Data Type: <class 'numpy.ndarray'>\n",
-      "y_train Shape: (237096, 1)\n",
-      "y_train Example Value: [3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n"
+    "X_train, X_test, y_train, y_test, tokenizer = preprocess_for_LSTM(text_corpus_prepro, max_sequence_length=10, test_size=0.2)"
    ]
   },
   {
@@ -199,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +238,6 @@
     "            predictions = self.model(input_eval)\n",
     "            predictions = tf.squeeze(predictions, 0)\n",
     "\n",
-    "            # Ensure predictions is a 2D matrix\n",
     "            if len(predictions.shape) == 1:\n",
     "                predictions = tf.expand_dims(predictions, 0)\n",
     "\n",
@@ -263,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -271,11 +261,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "7410/7410 [==============================] - 482s 65ms/step - loss: 6.4583 - accuracy: 0.0374\n",
+      "7410/7410 [==============================] - 475s 64ms/step - loss: 4.2155 - accuracy: 0.5302\n",
       "Epoch 2/3\n",
-      "7410/7410 [==============================] - 463s 63ms/step - loss: 6.3809 - accuracy: 0.0379\n",
+      "7410/7410 [==============================] - 473s 64ms/step - loss: 4.1263 - accuracy: 0.5305\n",
       "Epoch 3/3\n",
-      "7410/7410 [==============================] - 482s 65ms/step - loss: 6.3502 - accuracy: 0.0380\n"
+      "7410/7410 [==============================] - 504s 68ms/step - loss: 4.1029 - accuracy: 0.5305\n"
      ]
     }
    ],
@@ -288,95 +278,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1853/1853 [==============================] - 26s 14ms/step - loss: 6.4546 - accuracy: 0.0384\n",
-      "1853/1853 [==============================] - 28s 15ms/step - loss: 6.4546 - accuracy: 0.0384\n",
-      "LSTM Model Accuracy: 0.038363561034202576\n",
-      "1853/1853 [==============================] - 27s 14ms/step - loss: 6.4546 - accuracy: 0.0384\n",
-      "LSTM Model Loss: 6.4545793533325195\n",
-      "1853/1853 [==============================] - 25s 14ms/step - loss: 6.4546 - accuracy: 0.0384\n",
-      "LSTM Model Perplexity: 635.606304337891\n"
+      "/workspaces/Trump_TextGeneration_NLP_Project/myenv/lib/python3.10/site-packages/keras/src/engine/training.py:3079: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
      ]
     }
    ],
-   "source": [
-    "# test \n",
-    "model_LSTM.evaluate(X_test, y_test)\n",
-    "print(model_LSTM.evaluate(X_test, y_test))\n",
-    "# print metrics\n",
-    "print(\"LSTM Model Accuracy:\", model_LSTM.evaluate(X_test, y_test)[1])\n",
-    "print(\"LSTM Model Loss:\", model_LSTM.evaluate(X_test, y_test)[0])\n",
-    "# perplextiy\n",
-    "print(\"LSTM Model Perplexity:\", np.exp(model_LSTM.evaluate(X_test, y_test)[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1853/1853 [==============================] - 25s 13ms/step - loss: 6.4546 - accuracy: 0.0384\n",
-      "[6.4545793533325195, 0.038363561034202576]\n"
-     ]
-    }
-   ],
-   "source": [
-    "predictions = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "model_LSTM.save('model_LSTM.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word index for 'I': 109\n"
+      "1853/1853 [==============================] - 27s 15ms/step - loss: 4.2061 - accuracy: 0.5303\n",
+      "LSTM Model Accuracy: 0.5302910208702087\n",
+      "LSTM Model Loss: 4.206118106842041\n"
      ]
     }
    ],
    "source": [
-    "print(\"Word index for 'I':\", tokenizer.word_index['my'])"
+    "predictions = model_LSTM.evaluate(X_test, y_test)\n",
+    "print(\"LSTM Model Accuracy:\", predictions[1])\n",
+    "print(\"LSTM Model Loss:\", predictions[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "france is the country of weapons exonerated priorities bias fest interest phds cup relationship and…\n"
+      "france forcing elko harrington welcoming achievement wisconsin dishonest la bystanders drip studios\n"
      ]
     }
    ],
    "source": [
     "model_LSTM = my_model_LSTM(256, num_unique_words, max_sequence_length)\n",
     "model_LSTM.load('model_LSTM.h5')\n",
-    "seed_text = 'france is the country of'\n",
+    "seed_text = 'france forcing'\n",
     "generated_text = model_LSTM.generate_text(seed_text, max_length=10)\n",
     "print(generated_text)"
    ]
