--- a/main.ipynb
+++ b/main.ipynb
@@ -124,7 +124,8 @@
     "\n",
     "# Preprocess text \n",
     "text_corpus_prepro = [word for speech in df['Speech_Text_prepro'].str.split() for word in speech]\n",
-    "train_corpus_prepro, test_corpus_prepro = train_test_split(text_corpus_prepro, test_size=0.2, random_state=42)"
+    "train_corpus_prepro, test_corpus_prepro = train_test_split(text_corpus_prepro, test_size=0.2, random_state=42)\n",
+    "print(\"text corpus type\",type(text_corpus_prepro))"
    ]
   },
   {
