--- a/main.ipynb
+++ b/main.ipynb
@@ -96,12 +96,12 @@
     "\n",
     "preprocessing = preprocessing_pipline(df['Speech_Text'])\n",
     "df['Speech_Text_prepro'] = preprocessing.preprocess_light()\n",
-    "print "
+    "df['Speech_Text_prepro2'] = preprocessing.preprocess()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,20 +125,36 @@
     "# Preprocess text \n",
     "text_corpus_prepro = [word for speech in df['Speech_Text_prepro'].str.split() for word in speech]\n",
     "train_corpus_prepro, test_corpus_prepro = train_test_split(text_corpus_prepro, test_size=0.2, random_state=42)\n",
-    "print(\"text corpus type\",type(text_corpus_prepro))"
+    "\n",
+    "text_corpus_prepro2 = [word for speech in df['Speech_Text_prepro2'].str.split() for word in speech]\n",
+    "train_corpus_prepro2, test_corpus_prepro2 = train_test_split(text_corpus_prepro, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-05 19:41:23.907701: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-05 19:41:23.941318: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-11-05 19:41:23.941371: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-11-05 19:41:23.941410: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-11-05 19:41:23.948749: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-05 19:41:23.949612: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-11-05 19:41:25.129120: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.preprocessing.text import Tokenizer\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
-    "\n",
     "\n",
     "def preprocess_for_LSTM(text_corpus, max_sequence_length=10, test_size=0.2):\n",
     "    tokenizer = Tokenizer()\n",
@@ -174,11 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test, tokenizer = preprocess_for_LSTM(text_corpus_prepro, max_sequence_length=10, test_size=0.2)"
+    "X_train, X_test, y_train, y_test, tokenizer = preprocess_for_LSTM(text_corpus_prepro, max_sequence_length=10, test_size=0.2)\n",
+    "X_train2, X_test2, y_train2, y_test2, tokenizer2 = preprocess_for_LSTM(text_corpus_prepro, max_sequence_length=10, test_size=0.2)\n"
    ]
   },
   {
@@ -191,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,33 +270,36 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Light prepro"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3\n",
-      "7410/7410 [==============================] - 475s 64ms/step - loss: 4.2155 - accuracy: 0.5302\n",
-      "Epoch 2/3\n",
-      "7410/7410 [==============================] - 473s 64ms/step - loss: 4.1263 - accuracy: 0.5305\n",
-      "Epoch 3/3\n",
-      "7410/7410 [==============================] - 504s 68ms/step - loss: 4.1029 - accuracy: 0.5305\n"
+      "7410/7410 [==============================] - 92s 12ms/step - loss: 4.2218 - accuracy: 0.5304\n"
      ]
     }
    ],
    "source": [
     "num_unique_words = len(tokenizer.word_index) + 1\n",
-    "max_sequence_length = 15\n",
-    "model_LSTM = my_model_LSTM(256, num_unique_words, max_sequence_length)\n",
-    "model_LSTM.train(X_train, y_train, epochs=3)"
+    "max_sequence_length = 40\n",
+    "model_LSTM = my_model_LSTM(50, num_unique_words, max_sequence_length)\n",
+    "model_LSTM.train(X_train, y_train, epochs=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -297,16 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1853/1853 [==============================] - 27s 15ms/step - loss: 4.2061 - accuracy: 0.5303\n",
+      "1853/1853 [==============================] - 9s 5ms/step - loss: 4.1684 - accuracy: 0.5303\n",
       "LSTM Model Accuracy: 0.5302910208702087\n",
-      "LSTM Model Loss: 4.206118106842041\n"
+      "LSTM Model Loss: 4.1684250831604\n"
      ]
     }
    ],
@@ -318,14 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "france forcing elko harrington welcoming achievement wisconsin dishonest la bystanders drip studios\n"
+      "france forcing sadly focused presidency permissible curing weaken fiftyfour fun lawyers nancy…\n"
      ]
     }
    ],
@@ -334,6 +354,85 @@
     "model_LSTM.load('model_LSTM.h5')\n",
     "seed_text = 'france forcing'\n",
     "generated_text = model_LSTM.generate_text(seed_text, max_length=10)\n",
+    "print(generated_text)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dfdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7410/7410 [==============================] - 95s 13ms/step - loss: 4.2214 - accuracy: 0.5304\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_unique_words2 = len(tokenizer2.word_index) + 1\n",
+    "max_sequence_length = 40\n",
+    "model_LSTM2 = my_model_LSTM(50, num_unique_words2, max_sequence_length)\n",
+    "model_LSTM2.train(X_train2, y_train2, epochs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_LSTM2.save('model_LSTM2.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1853/1853 [==============================] - 10s 5ms/step - loss: 4.1667 - accuracy: 0.5303\n",
+      "LSTM Model Accuracy: 0.5302910208702087\n",
+      "LSTM Model Loss: 4.1667046546936035\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = model_LSTM2.evaluate(X_test, y_test)\n",
+    "print(\"LSTM Model Accuracy:\", predictions[1])\n",
+    "print(\"LSTM Model Loss:\", predictions[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello penn hammering robbery ancestors case sounds assad cruz crusade wisconsins\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_LSTM2 = my_model_LSTM(256, num_unique_words, max_sequence_length)\n",
+    "model_LSTM2.load('model_LSTM.h5')\n",
+    "seed_text = 'hello'\n",
+    "generated_text = model_LSTM2.generate_text(seed_text, max_length=10)\n",
     "print(generated_text)"
    ]
   },
