--- a/main.ipynb
+++ b/main.ipynb
@@ -77,6 +77,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use the two preprocessing function defined in preprocessing_pipline.\n",
+    "One only remove the punctuation and do lower case, the other one also remove the stop and rare words."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -100,6 +109,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data \n",
+    "1. Without preprocessing -> terrible results... not intresting\n",
+    "2. Light preprocessing \n",
+    "3. Heavy preprocessing (stop words and rare words)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -120,7 +140,6 @@
     "train_corpus, test_corpus = train_test_split(text_corpus, test_size=0.2, random_state=42)\n",
     "print(\"text corpus type\",type(text_corpus))\n",
     "print(\"text corpus type\",type(text_corpus[0]))\n",
-    "\n",
     "\n",
     "# Preprocess text \n",
     "text_corpus_prepro = [word for speech in df['Speech_Text_prepro'].str.split() for word in speech]\n",
@@ -165,9 +184,9 @@
     "\n",
     "    lenght_of_sequences = 10\n",
     "\n",
-    "    for i in range(lenght_of_sequences, len(train_corpus)):\n",
-    "        input.append(train_corpus[i-lenght_of_sequences:i])\n",
-    "        output.append(train_corpus[i])\n",
+    "    for i in range(lenght_of_sequences, len(text_corpus)):\n",
+    "        input.append(text_corpus[i - lenght_of_sequences:i])\n",
+    "        output.append(text_corpus[i])\n",
     "\n",
     "    input = tokenizer.texts_to_sequences(input)\n",
     "    output = tokenizer.texts_to_sequences(output)\n",
