--- a/main.ipynb
+++ b/main.ipynb
@@ -121,68 +121,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "text corpus type <class 'list'>\n",
-      "text corpus type <class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "text_corpus = [word for speech in df['Speech_Text'].str.split() for word in speech]\n",
-    "train_corpus, test_corpus = train_test_split(text_corpus, test_size=0.2, random_state=42)\n",
-    "print(\"text corpus type\",type(text_corpus))\n",
-    "print(\"text corpus type\",type(text_corpus[0]))\n",
     "\n",
     "# Preprocess text \n",
     "text_corpus_prepro = [word for speech in df['Speech_Text_prepro'].str.split() for word in speech]\n",
-    "train_corpus_prepro, test_corpus_prepro = train_test_split(text_corpus_prepro, test_size=0.2, random_state=42)\n",
     "\n",
-    "text_corpus_prepro2 = [word for speech in df['Speech_Text_prepro2'].str.split() for word in speech]\n",
-    "train_corpus_prepro2, test_corpus_prepro2 = train_test_split(text_corpus_prepro, test_size=0.2, random_state=42)"
+    "text_corpus_prepro2 = [word for speech in df['Speech_Text_prepro2'].str.split() for word in speech]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-05 19:41:23.907701: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-11-05 19:41:23.941318: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2023-11-05 19:41:23.941371: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2023-11-05 19:41:23.941410: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-11-05 19:41:23.948749: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-11-05 19:41:23.949612: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-11-05 19:41:25.129120: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.preprocessing.text import Tokenizer\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "\n",
-    "def preprocess_for_LSTM(text_corpus, max_sequence_length=10, test_size=0.2):\n",
+    "def preprocess_for_LSTM(text_corpus, lenght_of_sequences=10, test_size=0.2):\n",
     "    tokenizer = Tokenizer()\n",
     "    tokenizer.fit_on_texts(text_corpus)\n",
     "\n",
     "    input = []\n",
     "    output = []\n",
     "\n",
-    "    lenght_of_sequences = 10\n",
     "\n",
     "    for i in range(lenght_of_sequences, len(text_corpus)):\n",
     "        input.append(text_corpus[i - lenght_of_sequences:i])\n",
@@ -200,7 +170,7 @@
     "    output = np.array(output)\n",
     "\n",
     "    # Split your data into train and test sets\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(input, output, test_size=0.2, random_state=42)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(input, output, test_size=test_size, random_state=42)\n",
     "    \n",
     "    return X_train, X_test, y_train, y_test, tokenizer\n",
     "\n",
@@ -209,12 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test, tokenizer = preprocess_for_LSTM(text_corpus_prepro, max_sequence_length=10, test_size=0.2)\n",
-    "X_train2, X_test2, y_train2, y_test2, tokenizer2 = preprocess_for_LSTM(text_corpus_prepro, max_sequence_length=10, test_size=0.2)\n"
+    "X_train2, X_test2, y_train2, y_test2, tokenizer2 = preprocess_for_LSTM(text_corpus_prepro2, max_sequence_length=10, test_size=0.2)\n"
    ]
   },
   {
@@ -298,14 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7410/7410 [==============================] - 92s 12ms/step - loss: 4.2218 - accuracy: 0.5304\n"
+      "Epoch 1/5\n",
+      "4720/4720 [==============================] - 59s 12ms/step - loss: 7.3409 - accuracy: 0.0137\n",
+      "Epoch 2/5\n",
+      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.8646 - accuracy: 0.0350\n",
+      "Epoch 3/5\n",
+      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.4463 - accuracy: 0.0673\n",
+      "Epoch 4/5\n",
+      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.0864 - accuracy: 0.0978\n",
+      "Epoch 5/5\n",
+      "4720/4720 [==============================] - 58s 12ms/step - loss: 5.7856 - accuracy: 0.1230\n"
      ]
     }
    ],
@@ -313,39 +292,30 @@
     "num_unique_words = len(tokenizer.word_index) + 1\n",
     "max_sequence_length = 40\n",
     "model_LSTM = my_model_LSTM(50, num_unique_words, max_sequence_length)\n",
-    "model_LSTM.train(X_train, y_train, epochs=1)"
+    "model_LSTM.train(X_train, y_train, epochs=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/workspaces/Trump_TextGeneration_NLP_Project/myenv/lib/python3.10/site-packages/keras/src/engine/training.py:3079: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
-      "  saving_api.save_model(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_LSTM.save('model_LSTM.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1853/1853 [==============================] - 9s 5ms/step - loss: 4.1684 - accuracy: 0.5303\n",
-      "LSTM Model Accuracy: 0.5302910208702087\n",
-      "LSTM Model Loss: 4.1684250831604\n"
+      "1180/1180 [==============================] - 6s 5ms/step - loss: 6.3623 - accuracy: 0.1160\n",
+      "LSTM Model Accuracy: 0.11599883437156677\n",
+      "LSTM Model Loss: 6.362343788146973\n"
      ]
     }
    ],
@@ -357,14 +327,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "france forcing sadly focused presidency permissible curing weaken fiftyfour fun lawyers nancy…\n"
+      "france forcing prosperous patchwork mugging whole… toughest rational complain develop guy… weaken\n"
      ]
     }
    ],
@@ -386,14 +356,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7410/7410 [==============================] - 95s 13ms/step - loss: 4.2214 - accuracy: 0.5304\n"
+      "Epoch 1/5\n",
+      "4720/4720 [==============================] - 59s 12ms/step - loss: 7.3365 - accuracy: 0.0145\n",
+      "Epoch 2/5\n",
+      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.8391 - accuracy: 0.0362\n",
+      "Epoch 3/5\n",
+      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.4185 - accuracy: 0.0691\n",
+      "Epoch 4/5\n",
+      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.0564 - accuracy: 0.0999\n",
+      "Epoch 5/5\n",
+      "4720/4720 [==============================] - 58s 12ms/step - loss: 5.7570 - accuracy: 0.1239\n"
      ]
     }
    ],
@@ -401,12 +380,12 @@
     "num_unique_words2 = len(tokenizer2.word_index) + 1\n",
     "max_sequence_length = 40\n",
     "model_LSTM2 = my_model_LSTM(50, num_unique_words2, max_sequence_length)\n",
-    "model_LSTM2.train(X_train2, y_train2, epochs=1)"
+    "model_LSTM2.train(X_train2, y_train2, epochs=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,16 +394,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1853/1853 [==============================] - 10s 5ms/step - loss: 4.1667 - accuracy: 0.5303\n",
-      "LSTM Model Accuracy: 0.5302910208702087\n",
-      "LSTM Model Loss: 4.1667046546936035\n"
+      "1180/1180 [==============================] - 6s 5ms/step - loss: 6.3511 - accuracy: 0.1171\n",
+      "LSTM Model Accuracy: 0.11713763326406479\n",
+      "LSTM Model Loss: 6.35109281539917\n"
      ]
     }
    ],
@@ -436,14 +415,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello penn hammering robbery ancestors case sounds assad cruz crusade wisconsins\n"
+      "hello speed onetenth oceans except going pardon garden iraq them… dousing\n"
      ]
     }
    ],
